# pg_extensions-releases

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
crates/pg_observability/: Cargo.toml
crates/pg_observability/src/: kafka_metrics.rs  lib.rs  metrics_setup.rs  tracing_setup.rs
crates/pg_spi/: Cargo.toml
crates/pg_spi/src/: bridge.rs  execute.rs  lib.rs  types.rs
docs/: configuration.md  pg_delta.md  pg_kafka.md  pg_ml.md  troubleshooting.md
examples/: README.md
examples/bim/: README.md  import.sql  schema.sql
examples/retail-forecasting/: Dockerfile  README.md  docker-compose.yml  retail-forecasting.sqlbook  schema-no-defaults.yaml  schema.yaml
examples/scenario-analysis/: 01-schema.sql  02-sample-scenarios.sql  03-optimize-with-checkpoint.sql  04-aggregate-results.sql  README.md
examples/streaming/: 01_basic_filter_and_map.sql  02_sql_enrichment.sql  03_windowed_aggregation.sql  04_unbounded_aggregation.sql  05_stream_joins.sql  06_cdc_pipeline.sql  07_cep_pattern_matching.sql  08_branching_and_routing.sql  09_table_to_table.sql  10_iot_mqtt_pipeline.sql  11_observability.sql  12_medallion_star_schema.sql  README.md
extensions/eidos_oauth/: Cargo.toml  README.md  eidos_oauth.control
extensions/eidos_oauth/src/: claims.rs  ffi.rs  jwks.rs  jwt.rs  lib.rs  validator.rs
extensions/eidos_oauth/src/test_fixtures/: test_rsa_private.pem  test_rsa_public.pem
extensions/pg_calendar/: Cargo.toml  pg_calendar.control
extensions/pg_currency/: Cargo.toml  pg_currency.control
extensions/pg_currency/src/: convert.rs  currency.rs  lib.rs  queries.rs  rate.rs  schema.rs  seed.rs
extensions/pg_delta/: Cargo.toml  README.md  pg_delta.control
extensions/pg_delta/src/: lib.rs
extensions/pg_delta/src/storage/: config.rs  convert.rs  delta_ops.rs  mod.rs
extensions/pg_delta/src/streams/: export.rs  ingest.rs  manager.rs  mod.rs
extensions/pg_feature/: Cargo.toml  README.md  pg_feature.control
extensions/pg_feature/examples/: init.sql
extensions/pg_feature/src/: dfs.rs  lib.rs  primitives.rs  relationships.rs  schema.rs  sql_gen.rs  time_indexes.rs
extensions/pg_fsm/: Cargo.toml  (+1 more)
extensions/pg_image/: Cargo.toml  Makefile  README.md  pg_image.control
extensions/pg_image/src/: caption.rs  decode.rs  detect.rs  embed.rs  error.rs  exif.rs  gps.rs  hashing.rs  lib.rs  metadata.rs  onnx_common.rs  tokenizer.rs  transforms.rs
extensions/pg_kafka/: Cargo.toml  README.md  pg_kafka.control
extensions/pg_kafka/pytests/: conftest.py  requirements.txt  test_kafka_python.py
extensions/pg_kafka/src/: admin.rs  config.rs  lib.rs  produce.rs  schema.rs  topic_admin.rs  topic_writes.rs  validation.rs  worker.rs
extensions/pg_kafka/src/protocol/: api.rs  codec.rs  mod.rs  records.rs  types.rs
extensions/pg_kafka/src/server/: mod.rs  tcp.rs
extensions/pg_kafka/src/storage/: client.rs  mod.rs  parse.rs  source_insert.rs  spi_bridge.rs  spi_client.rs  validation.rs
extensions/pg_kafka/tests/: kafka_client_test.rs  protocol_test.rs
extensions/pg_kafka/tests/common/: mod.rs
extensions/pg_ml/: .gitignore  Cargo.toml  Makefile  README.md  TECHNICAL_DOCUMENTATION.md  pg_ml.control  pyproject.toml
extensions/pg_ml/src/: arrow_convert.rs  async_training.rs  async_training_sql.rs  config.rs  datasets.rs  error.rs  lib.rs  mlflow.rs  models.rs  pycaret.rs  sql_functions.rs  venv.rs
extensions/pg_ml/src/embeddings/: config.rs  mod.rs  openai.rs  types.rs  voyage.rs
extensions/pg_ml/tests/pg_regress/sql/: setup.sql
extensions/pg_prob/: Cargo.toml  README.md  example.md  pg_prob.control
extensions/pg_prob/src/: correlation.rs  distribution.rs  fitting.rs  lib.rs  operators.rs  sampling.rs
extensions/pg_prob/tests/pg_regress/expected/: setup.out
extensions/pg_s3/: Cargo.toml  pg_s3.control
extensions/pg_s3/src/: lib.rs
extensions/pg_s3/src/s3/: error.rs  handlers.rs  http.rs  mod.rs  router.rs  xml.rs
extensions/pg_s3/src/server/: mod.rs  tcp.rs
extensions/pg_s3/src/storage/: content.rs  mod.rs  spi_client.rs
extensions/pg_s3/tests/: s3_client_test.rs
extensions/pg_s3/tests/common/: mod.rs
extensions/pg_solid/: Cargo.toml  build.rs  pg_solid.control
extensions/pg_solid/examples/: generate_samples.cpp
extensions/pg_solid/examples/samples/: box_10x8x3m.iges  box_10x8x3m.step  column_r300_h3000.iges  column_r300_h3000.step  sphere_r500.iges  sphere_r500.step  two_room_building.iges  two_room_building.step  wall_with_window.iges  wall_with_window.step
extensions/pg_solid/src/: gist.rs  lib.rs
extensions/pg_solid/src/cpp/: occt_wrapper.cpp
extensions/pg_solid/src/ffi/: boolean.rs  brep.rs  explode.rs  export.rs  ifc_geom.rs  import.rs  mesh.rs  mod.rs  primitives.rs  props.rs  spatial.rs  transform.rs
extensions/pg_solid/src/functions/: aggregates.rs  boolean.rs  constructors.rs  explode.rs  export.rs  ifc.rs  measurements.rs  mod.rs  operators.rs  predicates.rs  transforms.rs
extensions/pg_solid/src/ifc/: entity.rs  geometry.rs  mod.rs  parser.rs  semantic.rs  tokenizer.rs
extensions/pg_solid/src/types/: bbox3d.rs  mod.rs  point3d.rs  solid.rs  vec3d.rs
extensions/pg_solid/test_data/: minimal_building.ifc
extensions/pg_streaming/: Cargo.toml  build.rs  pg_streaming.control
extensions/pg_streaming/src/: config.rs  lib.rs  record.rs  worker.rs
extensions/pg_streaming/src/connector/: mod.rs
extensions/pg_streaming/src/connector/input/: cdc.rs  kafka.rs  mod.rs  table.rs
extensions/pg_streaming/src/connector/output/: branch.rs  kafka.rs  mod.rs  table.rs
extensions/pg_streaming/src/dsl/: mod.rs  parse.rs  types.rs  validate.rs
extensions/pg_streaming/src/engine/: coordinator.rs  executor.rs  mod.rs  pipeline_runtime.rs
extensions/pg_streaming/src/pipeline/: crud.rs  lifecycle.rs  mod.rs  observability.rs
extensions/pg_streaming/src/processor/: aggregate.rs  cep.rs  chain.rs  dedupe.rs  filter.rs  join.rs  log.rs  mapping.rs  mod.rs  sql_enrichment.rs  unnest.rs  window.rs
extensions/pg_swarm/: Cargo.toml  pg_swarm.control
extensions/pg_swarm/src/: lib.rs  node.rs  scheduler.rs  types.rs
(+88 files in other folders)
