[package]
name = "pg_spi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async-safe SPI bridge for PostgreSQL extensions"

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]

[dependencies]
pgrx.workspace = true
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
serde_json.workspace = true
hex.workspace = true
