[package]
name = "eidos_oauth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OAuth 2.0 JWT validator module for PostgreSQL 18"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_eidos_oauth"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = "9"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
pgrx-tests = "0.16"
simple_asn1 = "0.6"
