[package]
name = "pg_delta"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Delta Lake streaming integration for PostgreSQL"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[[bin]]
name = "pgrx_embed_pg_delta"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
futures.workspace = true
deltalake.workspace = true
deltalake-aws.workspace = true
deltalake-azure.workspace = true
deltalake-gcp.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
object_store.workspace = true
tokio-util.workspace = true
hex = "0.4"
pg_observability = { git = "https://github.com/matroidbe/pg_extensions" }

[dev-dependencies]
pgrx-tests.workspace = true
