[package]
name = "pg_image"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[[bin]]
name = "pgrx_embed_pg_image"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "tiff", "bmp"] }
kamadak-exif = "0.6"
image_hasher = "3"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pgrx-tests = "0.16"
