[package]
name = "pg_streaming"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Declarative stream processing engine inside PostgreSQL"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_streaming"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "pg_spi/pg14", "pg_observability/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "pg_spi/pg15", "pg_observability/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16", "pg_spi/pg16", "pg_observability/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17", "pg_spi/pg17", "pg_observability/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18", "pg_spi/pg18", "pg_observability/pg18"]
pg_test = []

[dependencies]
pgrx.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
pg_spi = { git = "https://github.com/matroidbe/pg_extensions", default-features = false }
pg_observability = { git = "https://github.com/matroidbe/pg_extensions", default-features = false }

[dev-dependencies]
pgrx-tests = "0.16"
